# youtube-content-migrator

./: .gitignore  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_macos_compatibility.py  test_macos_compatibility_minimal.py  test_merge.py  test_subtitle_conversion.py  youtube-migrator.py
.github/workflows/: ci.yml
docs/: USAGE.md
src/: cli.py  main.py
src/config/: settings.py
src/downloader/: listing.py  youtube_downloader.py
src/metadata/: extractor.py
src/organizer/: file_organizer.py
src/processor/: video_processor.py
src/utils/: logger.py  manifest.py  reporting.py  state.py
