[project]
name = "youtube-content-migrator"
version = "1.0.0"
description = "A comprehensive tool for downloading and migrating YouTube video content with metadata preservation and intelligent file organization"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.12.30",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2",
    "ffmpeg-python>=0.2.0",
]
